fixtures/rust/fallback/should_fail/match_default.rs
pub fn read_region(region: Result<String, ()>) -> String {
    match region { Err(_) => "ap-northeast-1".to_string(), Ok(value) => value }
}
